<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tellula.olaitanadetayo.smartcardsecurity.WriteCardActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/write_form_layout">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_details"
        android:layout_margin="10dp"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resident_name"
        android:layout_margin="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:id="@+id/resident_name_txt"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cluster_no"
        android:layout_margin="10dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:id="@+id/cluster_no_txt"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Write"
        android:layout_gravity="center"
        android:id="@+id/write_btn"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#2ecc71"
        android:id="@+id/card_details_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/success_tv"
            android:textSize="50dp"
            android:text="SUCCESS"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/serial_tv"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/card_details_tv"
            android:padding="@dimen/app_info_padding"
            android:layout_margin="4dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resident_tv"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/card_details_tv"
            android:padding="@dimen/app_info_padding"
            android:layout_margin="4dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cluster_tv"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/card_details_tv"
            android:padding="@dimen/app_info_padding"
            android:layout_margin="4dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ok_img"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:src="@drawable/ok96"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2ecc71"
            android:background="@color/colorWhite"
            android:layout_gravity="center"
            android:id="@+id/ok_success_btn"
            android:layout_marginTop="18dp"
            android:text="@string/ok"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:id="@+id/card_error_details_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_tv"
            android:textSize="50dp"
            android:text="ERROR"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_serial_tv"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/card_details_tv"
            android:padding="@dimen/app_info_padding"
            android:layout_margin="10dp"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/cancel96"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:background="@color/colorWhite"
            android:layout_gravity="center"
            android:id="@+id/ok_error_btn"
            android:layout_marginTop="60dp"
            android:text="@string/ok"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/write_response_tv"
        android:visibility="gone"
        android:text="Tap the card to write to it"/>
</LinearLayout>
